--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@
 rootProject.name = 'myproject'
 apply from: "${rootDir}/gradle/scripts/settings-flags.gradle"
 
-include('app')
+includeWithFlags ':app', 'java', 'publish'
+includeWithFlags ':bar', 'java'
