updates to fix duplicates issue, need to revist

--- a/gradle/scripts/lib/java-versionprops.gradle
+++ b/gradle/scripts/lib/java-versionprops.gradle
@@ -39,6 +39,10 @@ configure(projectsWithFlags('java', 'publish')) {
         }
     }
 
+    tasks.processResources {
+        duplicatesStrategy = 'include'
+    }
+    
     // Ensure version.properties is available during the build.
     tasks.sourcesJar.dependsOn(tasks.versionProperties)
     tasks.processResources.dependsOn(tasks.versionProperties)
