--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,10 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from(components.java)
-        }
-    }
-}
+// publishing {
+//     publications {
+//         mavenJava(MavenPublication) {
+//             from(components.java)
+//         }
+//     }
+// }
