--- a/gradle/scripts/lib/java-publish.gradle
+++ b/gradle/scripts/lib/java-publish.gradle
@@ -89,7 +89,7 @@ configure(projectsWithFlags('publish')) {
             // Shared configuration for all publications, including BOM
             def currentArtifactId = project.ext.artifactId
             publication.artifactId currentArtifactId
-
+            println "publication.artifactId '${publication.artifactId}'"
             // Generate the POM.
             publication.pom {
                 // Write the elements required by OSSRH.
